Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -75,12 +75,8 @@
 </p>
 <h2><span class="mw-headline" id="Navigace_ve_3D_prostoru">Navigace ve 3D prostoru</span></h2>
 <p>FreeCAD m&aacute; k dispozici n&#283;kolik <a href="../Mouse_navigation.html" title="Mouse navigation">naviga&#269;n&iacute;ch re&#382;im&#367;</a>, kter&eacute; m&#283;n&iacute; zp&#367;sob, jak&yacute;m pou&#382;&iacute;v&aacute;te my&scaron; k interakci s objekty ve 3D pohledu a samotn&yacute;m pohledem. Jeden z nich je speci&aacute;ln&#283; vytvo&#345;en pro <a href="../Mouse_navigation.html#Touchpad_navigation" title="Mouse navigation">touchpady</a>, kde se nepou&#382;&iacute;v&aacute; prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i. V&yacute;choz&iacute;m re&#382;imem navigace je <a href="../Mouse_navigation.html#CAD_navigation" title="Mouse navigation">CAD navigace</a>. Aktu&aacute;ln&iacute; re&#382;im navigace m&#367;&#382;ete rychle zm&#283;nit pomoc&iacute; tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> ve <a href="../Status_bar.html" class="mw-redirect" title="Status bar">stavov&eacute; li&scaron;t&#283;</a> nebo kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pr&aacute;zdnou oblast <a href="../3D_view.html" class="mw-redirect" title="3D view">3D pohledu</a>.
-</p>
-<div class="mw-translate-fuzzy">
-<p>M&aacute;te tak&eacute; p&#345;ednastaveno n&#283;kolik pohled&#367; (pohled shora, pohled zep&#345;edu, atd.) dostupn&yacute;ch v menu Pohled, na pruhu n&aacute;stroj&#367; pohledu a numerick&yacute;mi kl&aacute;vesami (<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">1</span>, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">2</span>, atd...), a tak&eacute; prav&yacute;m kliknut&iacute;m my&scaron;i na objekt nebo do pr&aacute;zdn&eacute; plochy 3D pohledu m&aacute;te rychl&yacute; p&#345;&iacute;stup k n&#283;kter&yacute;m b&#283;&#382;n&yacute;m operac&iacute;m jako je nastaven&iacute; jednotliv&yacute;ch pohled&#367; nebo um&iacute;st&#283;n&iacute; objektu v pohledu stromu.
-</p>
-</div>
-<p><span id="First_steps_with_FreeCAD"></span>
+</p><p>V nab&iacute;dce Zobrazen&iacute;, na panelu n&aacute;stroj&#367; Zobrazen&iacute; a pomoc&iacute; numerick&yacute;ch kl&aacute;vesov&yacute;ch zkratek (<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">1</span>, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">2</span> atd.) m&aacute;te k dispozici tak&eacute; n&#283;kolik p&#345;ednastaven&yacute;ch zobrazen&iacute; (pohled shora, pohled zep&#345;edu atd.).  Kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na objekt nebo na pr&aacute;zdnou oblast 3D pohledu z&iacute;sk&aacute;te rychl&yacute; p&#345;&iacute;stup k n&#283;kter&yacute;m b&#283;&#382;n&yacute;m operac&iacute;m, jako je nastaven&iacute; konkr&eacute;tn&iacute;ho pohledu nebo vyhled&aacute;n&iacute; objektu ve stromov&eacute;m zobrazen&iacute;.
+</p><p><span id="First_steps_with_FreeCAD"></span>
 </p>
 <h2><span id="Prvn.C3.AD_kroky_s_FreeCADem"></span><span class="mw-headline" id="Prvn&iacute;_kroky_s_FreeCADem">Prvn&iacute; kroky s FreeCADem</span></h2>
 <p>C&iacute;lem FreeCADu je umo&#382;nit vytv&aacute;&#345;en&iacute; velmi p&#345;esn&yacute;ch 3D model&#367;, p&#345;i udr&#382;en&iacute; pevn&eacute; kontroly nad t&#283;mito modely (b&yacute;t schopen vracet se zp&#283;t v modelov&aacute;n&iacute; a moci m&#283;nit parametry) a realizovat tyto modely (3D tisk, CNC obr&aacute;b&#283;n&iacute; nebo cel&aacute; konstruk&#269;n&iacute; pracovi&scaron;t&#283;). To je d&#367;vod pro&#269; se velmi li&scaron;&iacute; od n&#283;kter&yacute;ch jin&yacute;ch 3D aplikac&iacute; vytv&aacute;&#345;en&yacute;ch pro jin&eacute; c&iacute;le, jako je animovan&yacute; film nebo hry. Jeho k&#345;ivka osvojov&aacute;n&iacute; znalost&iacute; m&#367;&#382;e b&yacute;t p&#345;&iacute;kr&aacute;, zvl&aacute;&scaron;t&#283; je-li to V&aacute;&scaron; prvn&iacute; kontakt se 3D modelov&aacute;n&iacute;m. Jestli n&#283;kde naraz&iacute;te, nezapome&#328;te, &#382;e je zde p&#345;&aacute;telsk&aacute; komunita na <a rel="nofollow" class="external text" href="http://forum.freecad.org/index.php">FreeCAD forum</a>, kter&aacute; V&aacute;m m&#367;&#382;e rychle pomoci.
@@ -209,13 +205,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118071552
+Cached time: 20260118071808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.225 seconds
-Preprocessor visited node count: 294/1000000
+CPU time usage: 0.105 seconds
+Real time usage: 0.235 seconds
+Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -225,19 +221,19 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.561      1 -total
- 22.09%    4.543      1 Template:Userdocnavi
- 15.60%    3.207      1 Template:Incode
- 15.15%    3.114      2 Template:KEY
- 12.51%    2.573      1 Template:Navigation_menu_2
- 12.01%    2.470      2 Template:Docnav
-  9.60%    1.974      1 Template:Emphasis
-  9.27%    1.906      1 Template:Caption
-  6.27%    1.290      1 Template:Button
-  5.76%    1.184      1 Template:TOCright
+100.00%   24.246      1 -total
+ 26.56%    6.440      1 Template:Userdocnavi
+ 16.61%    4.028      1 Template:Navigation_menu_2
+ 14.06%    3.410      2 Template:Docnav
+  9.66%    2.343      1 Template:Caption
+  9.44%    2.289      1 Template:Emphasis
+  8.94%    2.168      1 Template:TOCright
+  8.93%    2.164      2 Template:KEY
+  8.90%    2.158      1 Template:Button
+  8.26%    2.003      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071552 and revision id 1739830. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071808 and revision id 1739832. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
