Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -15,7 +15,7 @@
 <li><a href="../pt-br/Getting_started.html" class="mw-pt-progress mw-pt-progress--high" title="Come&ccedil;ando a usar (71% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Getting_started.html" class="mw-pt-progress mw-pt-progress--med" title="Primii pa&#351;i (29% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Getting_started.html" class="mw-pt-progress mw-pt-progress--low" title="Getting started (8% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Getting_started.html" class="mw-pt-progress mw-pt-progress--high" title="&#1055;&#1098;&#1088;&#1074;&#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080; (98% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Getting_started.html" class="mw-pt-progress mw-pt-progress--high" title="&#1053;&#1072;&#1095;&#1072;&#1083;&#1086; &#1088;&#1072;&#1073;&#1086;&#1090;&#1099; (88% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Getting_started.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1086;&#1079;&#1087;&#1086;&#1095;&#1072;&#1090;&#1080; (4% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -80,11 +80,8 @@
 </p>
 <h2><span id="Prvn.C3.AD_kroky_s_FreeCADem"></span><span class="mw-headline" id="Prvn&iacute;_kroky_s_FreeCADem">Prvn&iacute; kroky s FreeCADem</span></h2>
 <p>C&iacute;lem FreeCADu je umo&#382;nit vytv&aacute;&#345;en&iacute; velmi p&#345;esn&yacute;ch 3D model&#367;, p&#345;i udr&#382;en&iacute; pevn&eacute; kontroly nad t&#283;mito modely (b&yacute;t schopen vracet se zp&#283;t v modelov&aacute;n&iacute; a moci m&#283;nit parametry) a realizovat tyto modely (3D tisk, CNC obr&aacute;b&#283;n&iacute; nebo cel&aacute; konstruk&#269;n&iacute; pracovi&scaron;t&#283;). To je d&#367;vod pro&#269; se velmi li&scaron;&iacute; od n&#283;kter&yacute;ch jin&yacute;ch 3D aplikac&iacute; vytv&aacute;&#345;en&yacute;ch pro jin&eacute; c&iacute;le, jako je animovan&yacute; film nebo hry. Jeho k&#345;ivka osvojov&aacute;n&iacute; znalost&iacute; m&#367;&#382;e b&yacute;t p&#345;&iacute;kr&aacute;, zvl&aacute;&scaron;t&#283; je-li to V&aacute;&scaron; prvn&iacute; kontakt se 3D modelov&aacute;n&iacute;m. Jestli n&#283;kde naraz&iacute;te, nezapome&#328;te, &#382;e je zde p&#345;&aacute;telsk&aacute; komunita na <a rel="nofollow" class="external text" href="http://forum.freecad.org/index.php">FreeCAD forum</a>, kter&aacute; V&aacute;m m&#367;&#382;e rychle pomoci.
+</p><p>Pracovn&iacute; prost&#345;ed&iacute;, kter&eacute; budete ve FreeCADu pou&#382;&iacute;vat, z&aacute;vis&iacute; na typu pr&aacute;ce, kterou pot&#345;ebujete prov&eacute;st: Pokud budete pracovat na mechanick&yacute;ch modelech nebo obecn&#283;ji na jak&yacute;chkoli mal&yacute;ch objektech, pravd&#283;podobn&#283; budete cht&iacute;t vyzkou&scaron;et <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plochu PartDesign</a>. Pokud budete pracovat ve 2D, p&#345;epn&#283;te na <a href="../Draft_Workbench.html" title="Draft Workbench">pracovn&iacute; plochu Draft</a> nebo <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">pracovn&iacute; plochu Sketcher</a>, pokud pot&#345;ebujete omezen&iacute;. Pokud chcete pracovat s BIM, spus&#357;te <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plochu BIM</a>. A pokud p&#345;ich&aacute;z&iacute;te ze sv&#283;ta OpenSCADu, vyzkou&scaron;ejte <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">pracovn&iacute; plochu OpenSCAD</a>. K dispozici je tak&eacute; mnoho komunitou vyvinut&yacute;ch <a href="../External_workbenches.html" title="External workbenches">extern&iacute;ch pracovn&iacute;ch ploch</a>.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Se kterou pracovn&iacute; plochou za&#269;nete z&aacute;vis&iacute; na typu pr&aacute;ce, kterou chcete s FreeCADem d&#283;lat: Chete-li pracovat s mechanick&yacute;mi modely nebo obecn&#283;ji s objekty s vy&scaron;&scaron;&iacute; p&#345;esnost&iacute;, asi budete cht&iacute;t zkusit <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">pracovn&iacute; plochu N&aacute;vrh d&iacute;lu</a>. Budete-li pracovat ve 2D, pak p&#345;epn&#283;te do <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">pracovn&iacute; plochy Kreslen&iacute;</a> nebo <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">pracovn&iacute; plochy N&aacute;&#269;rt</a> pot&#345;ebujete-li vazby. Chcete-li d&#283;lat BIM, spus&#357;te <a href="../cs/Arch_Workbench.html" title="Arch Workbench/cs">pracovn&iacute; plochu Architektura</a>. Pracujete-li s n&aacute;vrhy lod&iacute;, je zde pro V&aacute;s speci&aacute;ln&iacute; <a href="../cs/Ship_Workbench.html" title="Ship Workbench/cs">pracovn&iacute; plocha Lo&#271;</a>. A jestli&#382;e p&#345;ich&aacute;z&iacute;te ze sv&#283;ta OpenSCADu, zkuste <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">pracovn&iacute; plochu OpenSCAD</a>.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Pracovn&iacute; plochy m&#367;&#382;ete p&#345;ep&iacute;nat kdykoliv a tak&eacute; m&#367;&#382;ete <a href="../cs/Interface_Customization.html" title="Interface Customization/cs">u&#382;ivatelsky nastavovat</a> Va&scaron;i obl&iacute;benou pracovn&iacute; plochu p&#345;id&aacute;n&iacute;m n&aacute;stroj&#367; z jin&yacute;ch pracovn&iacute;ch ploch.
 </p>
@@ -205,35 +202,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118071808
+Cached time: 20260118072210
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.235 seconds
-Preprocessor visited node count: 293/1000000
+CPU time usage: 0.113 seconds
+Real time usage: 0.294 seconds
+Preprocessor visited node count: 292/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4565/5000000 bytes
+Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.246      1 -total
- 26.56%    6.440      1 Template:Userdocnavi
- 16.61%    4.028      1 Template:Navigation_menu_2
- 14.06%    3.410      2 Template:Docnav
-  9.66%    2.343      1 Template:Caption
-  9.44%    2.289      1 Template:Emphasis
-  8.94%    2.168      1 Template:TOCright
-  8.93%    2.164      2 Template:KEY
-  8.90%    2.158      1 Template:Button
-  8.26%    2.003      1 Template:Incode
+100.00%   48.939      1 -total
+ 22.80%   11.160      1 Template:Caption
+ 22.03%   10.781      2 Template:Docnav
+ 19.47%    9.530      1 Template:TOCright
+ 11.61%    5.680      1 Template:Userdocnavi
+  6.87%    3.363      1 Template:Navigation_menu_2
+  6.16%    3.014      1 Template:Incode
+  6.03%    2.950      2 Template:KEY
+  5.16%    2.523      1 Template:Button
+  4.00%    1.959      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071808 and revision id 1739832. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118072210 and revision id 1739834. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
