--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -81,12 +81,8 @@
 <h2><span id="Prvn.C3.AD_kroky_s_FreeCADem"></span><span class="mw-headline" id="Prvn&iacute;_kroky_s_FreeCADem">Prvn&iacute; kroky s FreeCADem</span></h2>
 <p>C&iacute;lem FreeCADu je umo&#382;nit vytv&aacute;&#345;en&iacute; velmi p&#345;esn&yacute;ch 3D model&#367;, p&#345;i udr&#382;en&iacute; pevn&eacute; kontroly nad t&#283;mito modely (b&yacute;t schopen vracet se zp&#283;t v modelov&aacute;n&iacute; a moci m&#283;nit parametry) a realizovat tyto modely (3D tisk, CNC obr&aacute;b&#283;n&iacute; nebo cel&aacute; konstruk&#269;n&iacute; pracovi&scaron;t&#283;). To je d&#367;vod pro&#269; se velmi li&scaron;&iacute; od n&#283;kter&yacute;ch jin&yacute;ch 3D aplikac&iacute; vytv&aacute;&#345;en&yacute;ch pro jin&eacute; c&iacute;le, jako je animovan&yacute; film nebo hry. Jeho k&#345;ivka osvojov&aacute;n&iacute; znalost&iacute; m&#367;&#382;e b&yacute;t p&#345;&iacute;kr&aacute;, zvl&aacute;&scaron;t&#283; je-li to V&aacute;&scaron; prvn&iacute; kontakt se 3D modelov&aacute;n&iacute;m. Jestli n&#283;kde naraz&iacute;te, nezapome&#328;te, &#382;e je zde p&#345;&aacute;telsk&aacute; komunita na <a rel="nofollow" class="external text" href="http://forum.freecad.org/index.php">FreeCAD forum</a>, kter&aacute; V&aacute;m m&#367;&#382;e rychle pomoci.
 </p><p>Pracovn&iacute; prost&#345;ed&iacute;, kter&eacute; budete ve FreeCADu pou&#382;&iacute;vat, z&aacute;vis&iacute; na typu pr&aacute;ce, kterou pot&#345;ebujete prov&eacute;st: Pokud budete pracovat na mechanick&yacute;ch modelech nebo obecn&#283;ji na jak&yacute;chkoli mal&yacute;ch objektech, pravd&#283;podobn&#283; budete cht&iacute;t vyzkou&scaron;et <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plochu PartDesign</a>. Pokud budete pracovat ve 2D, p&#345;epn&#283;te na <a href="../Draft_Workbench.html" title="Draft Workbench">pracovn&iacute; plochu Draft</a> nebo <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">pracovn&iacute; plochu Sketcher</a>, pokud pot&#345;ebujete omezen&iacute;. Pokud chcete pracovat s BIM, spus&#357;te <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plochu BIM</a>. A pokud p&#345;ich&aacute;z&iacute;te ze sv&#283;ta OpenSCADu, vyzkou&scaron;ejte <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">pracovn&iacute; plochu OpenSCAD</a>. K dispozici je tak&eacute; mnoho komunitou vyvinut&yacute;ch <a href="../External_workbenches.html" title="External workbenches">extern&iacute;ch pracovn&iacute;ch ploch</a>.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Pracovn&iacute; plochy m&#367;&#382;ete p&#345;ep&iacute;nat kdykoliv a tak&eacute; m&#367;&#382;ete <a href="../cs/Interface_Customization.html" title="Interface Customization/cs">u&#382;ivatelsky nastavovat</a> Va&scaron;i obl&iacute;benou pracovn&iacute; plochu p&#345;id&aacute;n&iacute;m n&aacute;stroj&#367; z jin&yacute;ch pracovn&iacute;ch ploch.
-</p>
-</div>
-<p><span id="Working_with_the_PartDesign_and_Sketcher_workbenches"></span>
+</p><p>Pracovn&iacute; plochy m&#367;&#382;ete kdykoli p&#345;ep&iacute;nat a tak&eacute; si svou obl&iacute;benou pracovn&iacute; plochu <a href="../Interface_Customization.html" title="Interface Customization">p&#345;izp&#367;sobit</a> p&#345;id&aacute;n&iacute;m n&aacute;stroj&#367; z jin&yacute;ch pracovn&iacute;ch ploch.
+</p><p><span id="Working_with_the_PartDesign_and_Sketcher_workbenches"></span>
 </p>
 <h2><span id="Pr.C3.A1ce_s_pracovn.C3.ADmi_plochami_PartDesign_a_Sketcher"></span><span class="mw-headline" id="Pr&aacute;ce_s_pracovn&iacute;mi_plochami_PartDesign_a_Sketcher">Pr&aacute;ce s pracovn&iacute;mi plochami PartDesign a Sketcher</span></h2>
 <div class="mw-translate-fuzzy">
@@ -202,13 +198,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118072210
+Cached time: 20260118072253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.294 seconds
-Preprocessor visited node count: 292/1000000
+CPU time usage: 0.105 seconds
+Real time usage: 0.208 seconds
+Preprocessor visited node count: 291/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -218,19 +214,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.939      1 -total
- 22.80%   11.160      1 Template:Caption
- 22.03%   10.781      2 Template:Docnav
- 19.47%    9.530      1 Template:TOCright
- 11.61%    5.680      1 Template:Userdocnavi
-  6.87%    3.363      1 Template:Navigation_menu_2
-  6.16%    3.014      1 Template:Incode
-  6.03%    2.950      2 Template:KEY
-  5.16%    2.523      1 Template:Button
-  4.00%    1.959      1 Template:Emphasis
+100.00%   31.976      1 -total
+ 29.32%    9.377      1 Template:Userdocnavi
+ 18.05%    5.771      1 Template:Navigation_menu_2
+ 10.72%    3.428      2 Template:KEY
+ 10.08%    3.224      2 Template:Docnav
+ 10.06%    3.216      1 Template:Button
+  9.93%    3.175      1 Template:Incode
+  9.90%    3.165      1 Template:Caption
+  9.14%    2.924      1 Template:Emphasis
+  6.00%    1.919      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118072210 and revision id 1739834. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118072253 and revision id 1739836. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
