Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -89,11 +89,8 @@
 <p><a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">Pracovn&iacute; plocha N&aacute;vrh d&iacute;lu</a> je speci&aacute;ln&#283; vytvo&#345;ena pro stavbu komplexn&iacute;ch objekt&#367; za&#269;&iacute;naj&iacute;c&iacute;ch od jednoduch&yacute;ch tvar&#367; a p&#345;id&aacute;v&aacute;n&iacute;m nebo odeb&iacute;r&aacute;n&iacute;m &#269;&aacute;st&iacute; (naz&yacute;van&eacute; "vlastnosti") a&#382; po z&iacute;sk&aacute;n&iacute; kone&#269;n&eacute;ho objektu. V&scaron;echny vlastnosti aplikovan&eacute; b&#283;hem modelovac&iacute;ho procesu jsou ulo&#382;eny v samostatn&eacute;m pohledu naz&yacute;van&eacute;m <a href="../cs/Document_structure.html" title="Document structure/cs">pohled stromu</a>, kter&yacute; tak&eacute; obsahuje dal&scaron;&iacute; objekty Va&scaron;eho dokumentu. Objekt N&aacute;vrh d&iacute;lu si m&#367;&#382;ete p&#345;edstavit jako v&yacute;sledek posloupnosti operac&iacute;, kter&eacute; jsou postupn&#283; aplikov&aacute;ny a vytv&aacute;&#345;ej&iacute; tak jeden velk&yacute; &#345;et&#283;zec. V pohledu stromu vid&iacute;te v&yacute;sledn&yacute; objekt, ale m&#367;&#382;ete ho rozlo&#382;it a z&iacute;skat v&scaron;echny p&#345;edchoz&iacute; stavy a zm&#283;nit jak&yacute;koliv jejich parametr, co&#382; automaticky aktualizuje v&yacute;sledn&yacute; objekt.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
-<p>Pracovn&iacute; plocha N&aacute;vrh d&iacute;lu siln&#283; vyu&#382;&iacute;v&aacute; jinou pracovn&iacute; plochu - <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">pracovn&iacute; plochu N&aacute;&#269;rt</a>. Plocha n&aacute;&#269;rtu v&aacute;m umo&#382;&#328;uje kreslen&iacute; 2D tvar&#367;, kter&eacute; jsou definov&aacute;ny vazbami mezi 2D tvary. Nap&#345;&iacute;klad m&#367;&#382;ete nakreslit obd&eacute;ln&iacute;k a nastavit vazbu d&eacute;lky na jednu z jeho stran. U t&eacute;to strany u&#382; pak d&aacute;le d&aacute;le nejde zm&#283;nt rozm&#283;r (dokud jen&iacute; vazba zm&#283;n&#283;na).
-</p>
-</div>
-<p>Tyto 2D tvary vytvo&#345;en&eacute; v N&aacute;&#269;rtu jsou &#269;asto pou&#382;&iacute;v&aacute;ny v pracovn&iacute; plo&scaron;e N&aacute;vrh d&iacute;lu, nap&#345;. vytvo&#345;en&iacute; 3D objemu nebo kreslen&iacute; oblast&iacute; na ploch&aacute;ch Va&scaron;ich objekt&#367;, kter&eacute; budou n&aacute;sledn&#283; odebr&aacute;ny z hlavn&iacute;ho objemu objektu. Toto je typick&yacute; pracovn&iacute; postup N&aacute;vrhu d&iacute;lu:
+<p>Pracovn&iacute; plocha PartDesign intenzivn&#283; vyu&#382;&iacute;v&aacute; jinou pracovn&iacute; plochu, <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a>. Sketcher umo&#382;&#328;uje kreslit 2D tvary, kter&eacute; jsou definov&aacute;ny pou&#382;it&iacute;m vazeb na 2D tvar. M&#367;&#382;ete nap&#345;&iacute;klad nakreslit obd&eacute;ln&iacute;k a nastavit velikost strany pomoc&iacute; v&aacute;z&aacute;n&iacute; d&eacute;lky na jednu ze stran. Tuto stranu pak ji&#382; nelze zm&#283;nit (pokud se nezm&#283;n&iacute; vazba)
+</p><p>Tyto 2D tvary vytvo&#345;en&eacute; v N&aacute;&#269;rtu jsou &#269;asto pou&#382;&iacute;v&aacute;ny v pracovn&iacute; plo&scaron;e N&aacute;vrh d&iacute;lu, nap&#345;. vytvo&#345;en&iacute; 3D objemu nebo kreslen&iacute; oblast&iacute; na ploch&aacute;ch Va&scaron;ich objekt&#367;, kter&eacute; budou n&aacute;sledn&#283; odebr&aacute;ny z hlavn&iacute;ho objemu objektu. Toto je typick&yacute; pracovn&iacute; postup N&aacute;vrhu d&iacute;lu:
 </p>
 <ol><li>Vytvo&#345;en&iacute; nov&eacute;ho n&aacute;&#269;rtu</li>
 <li>Nakreslen&iacute; uzav&#345;en&eacute;ho tvaru (ujist&#283;te se, &#382;e v&scaron;echny body jsou spojeny)</li>
@@ -198,13 +195,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118072253
+Cached time: 20260118072757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.208 seconds
-Preprocessor visited node count: 291/1000000
+CPU time usage: 0.118 seconds
+Real time usage: 0.194 seconds
+Preprocessor visited node count: 290/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -214,19 +211,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.976      1 -total
- 29.32%    9.377      1 Template:Userdocnavi
- 18.05%    5.771      1 Template:Navigation_menu_2
- 10.72%    3.428      2 Template:KEY
- 10.08%    3.224      2 Template:Docnav
- 10.06%    3.216      1 Template:Button
-  9.93%    3.175      1 Template:Incode
-  9.90%    3.165      1 Template:Caption
-  9.14%    2.924      1 Template:Emphasis
-  6.00%    1.919      1 Template:TOCright
+100.00%   17.666      1 -total
+ 22.67%    4.004      1 Template:Userdocnavi
+ 15.42%    2.724      2 Template:Docnav
+ 15.04%    2.656      1 Template:Navigation_menu_2
+ 11.19%    1.977      1 Template:Emphasis
+ 11.12%    1.965      1 Template:TOCright
+  9.42%    1.665      2 Template:KEY
+  9.07%    1.602      1 Template:Caption
+  8.41%    1.485      1 Template:Button
+  8.00%    1.413      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118072253 and revision id 1739836. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118072756 and revision id 1739838. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
