--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -107,10 +107,8 @@
 </p><p><span id="Working_with_the_Draft_and_BIM_workbenches"></span>
 </p>
 <h2><span id="Pr.C3.A1ce_s_pracovn.C3.ADmi_plochami_Draft_a_BIM"></span><span class="mw-headline" id="Pr&aacute;ce_s_pracovn&iacute;mi_plochami_Draft_a_BIM">Pr&aacute;ce s pracovn&iacute;mi plochami Draft a BIM</span></h2>
-<div class="mw-translate-fuzzy">
-<p><a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Pracovn&iacute; plocha Kreslen&iacute;</a> a <a href="../cs/Arch_Workbench.html" title="Arch Workbench/cs">pracovn&iacute; plocha Architektura</a> se chovaj&iacute; trochu jinak ne&#382; p&#345;ede&scaron;l&eacute; pracovn&iacute; plochy, a&#269;koli dodr&#382;uj&iacute; stejn&aacute; pravidla, kter&aacute; jsou spole&#269;n&aacute; cel&eacute;mu FreeCADu. Ve zkratce, zat&iacute;mco plochy N&aacute;&#269;rt a N&aacute;vrh d&iacute;lu jsou prim&aacute;rn&#283; yr&#269;eny k n&aacute;vrhu jednotliv&yacute;ch &#269;&aacute;st&iacute;, plochy Kreslen&iacute; a Architektura by m&#283;ly usnadnit pr&aacute;ci s n&#283;kolika jednodu&scaron;&scaron;&iacute;mi objekty.
+<p><a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft </a> a <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plocha BIM</a> se chovaj&iacute; trochu jinak ne&#382; ostatn&iacute; v&yacute;&scaron;e uveden&eacute; pracovn&iacute; plochy, i kdy&#382; se &#345;&iacute;d&iacute; stejn&yacute;mi pravidly, kter&aacute; jsou spole&#269;n&aacute; pro cel&yacute; FreeCAD. Stru&#269;n&#283; &#345;e&#269;eno, zat&iacute;mco Sketcher a PartDesign jsou ur&#269;eny p&#345;edev&scaron;&iacute;m k navrhov&aacute;n&iacute; jednotliv&yacute;ch d&iacute;l&#367;, Draft a BIM jsou ur&#269;eny k usnadn&#283;n&iacute; pr&aacute;ce s n&#283;kolika jednodu&scaron;&scaron;&iacute;mi objekty.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p><a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">pracovn&iacute; plocha Kreslen&iacute;</a> nab&iacute;z&iacute; 2D n&aacute;stroje trochu jednodu&scaron;&scaron;&iacute;, ne&#382; jak&eacute; najdete v tradi&#269;n&iacute;ch 2D CAD aplikac&iacute;ch jako je <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/AutoCAD">AutoCAD</a>. Nicm&eacute;n&#283;, kreslen&iacute; ve 2D je mimo hlavn&iacute; sm&#283;r sf&eacute;ry FreeCADu, neo&#269;ek&aacute;vejte, &#382;e zde najdete pln&yacute; rozsah n&aacute;stroj&#367;, kter&eacute; nab&iacute;zej&iacute; tyto jedno&uacute;&#269;elov&eacute; aplikace. V&#283;t&scaron;ina n&aacute;stroj&#367; Kreslen&iacute; nepracuje pouze ve 2D, ale tak&eacute; v pln&eacute;m 3D prostoru a vyu&#382;&iacute;vaj&iacute; v&yacute;hod pomocn&yacute;ch syst&eacute;m&#367; jako jsou <a href="../cs/Draft_SelectPlane.html" title="Draft SelectPlane/cs">pracovn&iacute; roviny</a> a <a href="../cs/Draft_Snap.html" title="Draft Snap/cs">zachycov&aacute;n&iacute;/uchopov&aacute;n&iacute; objekt&#367;</a>.
 </p>
@@ -195,13 +193,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118072757
+Cached time: 20260118073037
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.118 seconds
-Real time usage: 0.194 seconds
-Preprocessor visited node count: 290/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 0.192 seconds
+Preprocessor visited node count: 289/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -211,19 +209,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.666      1 -total
- 22.67%    4.004      1 Template:Userdocnavi
- 15.42%    2.724      2 Template:Docnav
- 15.04%    2.656      1 Template:Navigation_menu_2
- 11.19%    1.977      1 Template:Emphasis
- 11.12%    1.965      1 Template:TOCright
-  9.42%    1.665      2 Template:KEY
-  9.07%    1.602      1 Template:Caption
-  8.41%    1.485      1 Template:Button
-  8.00%    1.413      1 Template:Incode
+100.00%   22.194      1 -total
+ 28.95%    6.425      1 Template:Userdocnavi
+ 15.24%    3.383      1 Template:Navigation_menu_2
+ 12.58%    2.793      2 Template:Docnav
+ 10.42%    2.313      1 Template:TOCright
+  9.47%    2.101      2 Template:KEY
+  9.44%    2.096      1 Template:Incode
+  9.22%    2.047      1 Template:Caption
+  8.05%    1.786      1 Template:Button
+  7.26%    1.612      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118072756 and revision id 1739838. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118073037 and revision id 1739840. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
