--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -85,11 +85,8 @@
 </p><p><span id="Working_with_the_PartDesign_and_Sketcher_workbenches"></span>
 </p>
 <h2><span id="Pr.C3.A1ce_s_pracovn.C3.ADmi_plochami_PartDesign_a_Sketcher"></span><span class="mw-headline" id="Pr&aacute;ce_s_pracovn&iacute;mi_plochami_PartDesign_a_Sketcher">Pr&aacute;ce s pracovn&iacute;mi plochami PartDesign a Sketcher</span></h2>
-<div class="mw-translate-fuzzy">
-<p><a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">Pracovn&iacute; plocha N&aacute;vrh d&iacute;lu</a> je speci&aacute;ln&#283; vytvo&#345;ena pro stavbu komplexn&iacute;ch objekt&#367; za&#269;&iacute;naj&iacute;c&iacute;ch od jednoduch&yacute;ch tvar&#367; a p&#345;id&aacute;v&aacute;n&iacute;m nebo odeb&iacute;r&aacute;n&iacute;m &#269;&aacute;st&iacute; (naz&yacute;van&eacute; "vlastnosti") a&#382; po z&iacute;sk&aacute;n&iacute; kone&#269;n&eacute;ho objektu. V&scaron;echny vlastnosti aplikovan&eacute; b&#283;hem modelovac&iacute;ho procesu jsou ulo&#382;eny v samostatn&eacute;m pohledu naz&yacute;van&eacute;m <a href="../cs/Document_structure.html" title="Document structure/cs">pohled stromu</a>, kter&yacute; tak&eacute; obsahuje dal&scaron;&iacute; objekty Va&scaron;eho dokumentu. Objekt N&aacute;vrh d&iacute;lu si m&#367;&#382;ete p&#345;edstavit jako v&yacute;sledek posloupnosti operac&iacute;, kter&eacute; jsou postupn&#283; aplikov&aacute;ny a vytv&aacute;&#345;ej&iacute; tak jeden velk&yacute; &#345;et&#283;zec. V pohledu stromu vid&iacute;te v&yacute;sledn&yacute; objekt, ale m&#367;&#382;ete ho rozlo&#382;it a z&iacute;skat v&scaron;echny p&#345;edchoz&iacute; stavy a zm&#283;nit jak&yacute;koliv jejich parametr, co&#382; automaticky aktualizuje v&yacute;sledn&yacute; objekt.
-</p>
-</div>
-<p>Pracovn&iacute; plocha PartDesign intenzivn&#283; vyu&#382;&iacute;v&aacute; jinou pracovn&iacute; plochu, <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a>. Sketcher umo&#382;&#328;uje kreslit 2D tvary, kter&eacute; jsou definov&aacute;ny pou&#382;it&iacute;m vazeb na 2D tvar. M&#367;&#382;ete nap&#345;&iacute;klad nakreslit obd&eacute;ln&iacute;k a nastavit velikost strany pomoc&iacute; v&aacute;z&aacute;n&iacute; d&eacute;lky na jednu ze stran. Tuto stranu pak ji&#382; nelze zm&#283;nit (pokud se nezm&#283;n&iacute; vazba)
+<p><a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; plocha PartDesign</a> je ur&#269;ena k vytv&aacute;&#345;en&iacute; slo&#382;it&yacute;ch objekt&#367;, po&#269;&iacute;naje jednoduch&yacute;mi tvary a p&#345;id&aacute;v&aacute;n&iacute;m nebo odeb&iacute;r&aacute;n&iacute;m &#269;&aacute;st&iacute; (naz&yacute;van&yacute;ch "vlastnosti") a&#382; do z&iacute;sk&aacute;n&iacute; kone&#269;n&eacute;ho objektu. V&scaron;echny vlastnosti, kter&eacute; jste pou&#382;ili b&#283;hem procesu modelov&aacute;n&iacute;, jsou ulo&#382;eny v samostatn&eacute;m pohledu naz&yacute;van&eacute;m <a href="../Document_structure.html" title="Document structure">stromov&eacute; zobrazen&iacute;</a>, kter&eacute; obsahuje tak&eacute; ostatn&iacute; objekty ve va&scaron;em dokumentu. Objekt PartDesign si m&#367;&#382;ete p&#345;edstavit jako sled operac&iacute;, z nich&#382; ka&#382;d&aacute; je aplikov&aacute;na na v&yacute;sledek p&#345;edchoz&iacute; operace a tvo&#345;&iacute; tak jeden velk&yacute; &#345;et&#283;zec. Ve stromov&eacute;m zobrazen&iacute; vid&iacute;te kone&#269;n&yacute; objekt, ale m&#367;&#382;ete ho rozbalit a na&#269;&iacute;st v&scaron;echny p&#345;edchoz&iacute; stavy a zm&#283;nit libovoln&yacute; jejich parametr, co&#382; automaticky aktualizuje kone&#269;n&yacute; objekt.
+</p><p>Pracovn&iacute; plocha PartDesign intenzivn&#283; vyu&#382;&iacute;v&aacute; jinou pracovn&iacute; plochu, <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a>. Sketcher umo&#382;&#328;uje kreslit 2D tvary, kter&eacute; jsou definov&aacute;ny pou&#382;it&iacute;m vazeb na 2D tvar. M&#367;&#382;ete nap&#345;&iacute;klad nakreslit obd&eacute;ln&iacute;k a nastavit velikost strany pomoc&iacute; v&aacute;z&aacute;n&iacute; d&eacute;lky na jednu ze stran. Tuto stranu pak ji&#382; nelze zm&#283;nit (pokud se nezm&#283;n&iacute; vazba)
 </p><p>Tyto 2D tvary vytvo&#345;en&eacute; v N&aacute;&#269;rtu jsou &#269;asto pou&#382;&iacute;v&aacute;ny v pracovn&iacute; plo&scaron;e N&aacute;vrh d&iacute;lu, nap&#345;. vytvo&#345;en&iacute; 3D objemu nebo kreslen&iacute; oblast&iacute; na ploch&aacute;ch Va&scaron;ich objekt&#367;, kter&eacute; budou n&aacute;sledn&#283; odebr&aacute;ny z hlavn&iacute;ho objemu objektu. Toto je typick&yacute; pracovn&iacute; postup N&aacute;vrhu d&iacute;lu:
 </p>
 <ol><li>Vytvo&#345;en&iacute; nov&eacute;ho n&aacute;&#269;rtu</li>
@@ -193,13 +190,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118073037
+Cached time: 20260118073416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.192 seconds
-Preprocessor visited node count: 289/1000000
+CPU time usage: 0.086 seconds
+Real time usage: 0.156 seconds
+Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -209,19 +206,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.194      1 -total
- 28.95%    6.425      1 Template:Userdocnavi
- 15.24%    3.383      1 Template:Navigation_menu_2
- 12.58%    2.793      2 Template:Docnav
- 10.42%    2.313      1 Template:TOCright
-  9.47%    2.101      2 Template:KEY
-  9.44%    2.096      1 Template:Incode
-  9.22%    2.047      1 Template:Caption
-  8.05%    1.786      1 Template:Button
-  7.26%    1.612      1 Template:Emphasis
+100.00%   19.179      1 -total
+ 22.49%    4.314      1 Template:Userdocnavi
+ 18.89%    3.622      2 Template:KEY
+ 12.09%    2.319      1 Template:Caption
+ 11.51%    2.208      1 Template:Navigation_menu_2
+ 10.61%    2.034      2 Template:Docnav
+  8.62%    1.653      1 Template:Incode
+  7.85%    1.506      1 Template:Button
+  7.43%    1.425      1 Template:Emphasis
+  6.82%    1.308      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118073037 and revision id 1739840. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118073416 and revision id 1739842. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
