--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -106,11 +106,8 @@
 <h2><span id="Pr.C3.A1ce_s_pracovn.C3.ADmi_plochami_Draft_a_BIM"></span><span class="mw-headline" id="Pr&aacute;ce_s_pracovn&iacute;mi_plochami_Draft_a_BIM">Pr&aacute;ce s pracovn&iacute;mi plochami Draft a BIM</span></h2>
 <p><a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft </a> a <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plocha BIM</a> se chovaj&iacute; trochu jinak ne&#382; ostatn&iacute; v&yacute;&scaron;e uveden&eacute; pracovn&iacute; plochy, i kdy&#382; se &#345;&iacute;d&iacute; stejn&yacute;mi pravidly, kter&aacute; jsou spole&#269;n&aacute; pro cel&yacute; FreeCAD. Stru&#269;n&#283; &#345;e&#269;eno, zat&iacute;mco Sketcher a PartDesign jsou ur&#269;eny p&#345;edev&scaron;&iacute;m k navrhov&aacute;n&iacute; jednotliv&yacute;ch d&iacute;l&#367;, Draft a BIM jsou ur&#269;eny k usnadn&#283;n&iacute; pr&aacute;ce s n&#283;kolika jednodu&scaron;&scaron;&iacute;mi objekty.
 </p><p><a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">pracovn&iacute; plocha Draft</a> nab&iacute;z&iacute; 2D n&aacute;stroje trochu jednodu&scaron;&scaron;&iacute;, ne&#382; jak&eacute; najdete v tradi&#269;n&iacute;ch 2D CAD aplikac&iacute;ch jako je <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/AutoCAD">AutoCAD</a>. Nicm&eacute;n&#283;, kreslen&iacute; ve 2D je mimo hlavn&iacute; sm&#283;r sf&eacute;ry FreeCADu, neo&#269;ek&aacute;vejte, &#382;e zde najdete pln&yacute; rozsah n&aacute;stroj&#367;, kter&eacute; nab&iacute;zej&iacute; tyto jedno&uacute;&#269;elov&eacute; aplikace. V&#283;t&scaron;ina n&aacute;stroj&#367; Kreslen&iacute; nepracuje pouze ve 2D, ale tak&eacute; v pln&eacute;m 3D prostoru a vyu&#382;&iacute;vaj&iacute; v&yacute;hod pomocn&yacute;ch syst&eacute;m&#367; jako jsou <a href="../cs/Draft_SelectPlane.html" title="Draft SelectPlane/cs">pracovn&iacute; roviny</a> a <a href="../cs/Draft_Snap.html" title="Draft Snap/cs">zachycov&aacute;n&iacute;/uchopov&aacute;n&iacute; objekt&#367;</a>.
+</p><p><a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> p&#345;id&aacute;v&aacute; do FreeCADu n&aacute;stroj <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Building_Information_Modeling">BIM</a>, kter&yacute; umo&#382;&#328;uje vytv&aacute;&#345;et stavebn&iacute; modely s parametrick&yacute;mi objekty. Pracovn&iacute; plocha BIM se op&iacute;r&aacute; o dal&scaron;&iacute; modely jako je Draft a Sketcher. V&scaron;echny n&aacute;stroje Draft jsou p&#345;&iacute;tomny i v pracovn&iacute; plo&scaron;e BIM a v&#283;t&scaron;ina n&aacute;stroj&#367; z BIM pou&#382;&iacute;v&aacute; pomocn&yacute; kreslic&iacute; syst&eacute;m z Draftu.
 </p>
-<div class="mw-translate-fuzzy">
-<p><a href="../cs/Arch_Workbench.html" title="Arch Workbench/cs">Pracovn&iacute; plocha Architektura</a> p&#345;id&aacute;v&aacute; do FreeCADu n&aacute;stroj <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Building_Information_Modeling">BIM</a>, kter&yacute; umo&#382;&#328;uje vytv&aacute;&#345;et stavebn&iacute; modely s parametrick&yacute;mi objekty. Pracovn&iacute; plocha Architektura se op&iacute;r&aacute; o dal&scaron;&iacute; modely jako je Kreslen&iacute; a N&aacute;&#269;rt. V&scaron;echny n&aacute;stroje Kreslen&iacute; jsou p&#345;&iacute;tomny i v pracovn&iacute; plo&scaron;e Architektura a v&#283;t&scaron;ina n&aacute;stroj&#367; z Architektury pou&#382;&iacute;v&aacute; pomocn&yacute; kreslic&iacute; syst&eacute;m z Kreslen&iacute;.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Typick&aacute; pr&aacute;ce s Architekturou a Kreslen&iacute;m m&#367;&#382;e b&yacute;t:
 </p>
@@ -187,13 +184,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118073616
+Cached time: 20260118073837
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 287/1000000
+CPU time usage: 0.115 seconds
+Real time usage: 0.227 seconds
+Preprocessor visited node count: 286/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -203,19 +200,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.040      1 -total
- 25.17%    4.038      1 Template:Userdocnavi
- 15.01%    2.408      2 Template:Docnav
- 13.49%    2.164      1 Template:Navigation_menu_2
- 10.62%    1.704      1 Template:Incode
- 10.51%    1.686      2 Template:KEY
- 10.26%    1.645      1 Template:Caption
- 10.11%    1.621      1 Template:Emphasis
-  8.73%    1.400      1 Template:TOCright
-  5.87%    0.942      1 Template:Button
+100.00%   23.257      1 -total
+ 27.34%    6.358      1 Template:Userdocnavi
+ 15.27%    3.552      2 Template:Docnav
+ 12.53%    2.914      1 Template:Navigation_menu_2
+ 10.99%    2.557      1 Template:Incode
+ 10.04%    2.335      1 Template:Button
+  9.98%    2.320      2 Template:KEY
+  9.05%    2.105      1 Template:Caption
+  8.63%    2.007      1 Template:TOCright
+  4.68%    1.089      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118073616 and revision id 1739844. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118073837 and revision id 1739846. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
