--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -109,15 +109,13 @@
 </p><p><a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> p&#345;id&aacute;v&aacute; do FreeCADu n&aacute;stroj <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Building_Information_Modeling">BIM</a>, kter&yacute; umo&#382;&#328;uje vytv&aacute;&#345;et stavebn&iacute; modely s parametrick&yacute;mi objekty. Pracovn&iacute; plocha BIM se op&iacute;r&aacute; o dal&scaron;&iacute; modely jako je Draft a Sketcher. V&scaron;echny n&aacute;stroje Draft jsou p&#345;&iacute;tomny i v pracovn&iacute; plo&scaron;e BIM a v&#283;t&scaron;ina n&aacute;stroj&#367; z BIM pou&#382;&iacute;v&aacute; pomocn&yacute; kreslic&iacute; syst&eacute;m z Draftu.
 </p><p>Typick&yacute; pracovn&iacute; postup s pracovn&iacute;mi plochami BIM a Draft m&#367;&#382;e vypadat takto:
 </p>
-<div class="mw-translate-fuzzy">
-<ol><li>Kreslen&iacute; p&#345;&iacute;mek pomoc&iacute; n&aacute;stroje Kresln&iacute; P&#345;&iacute;mka</li>
-<li>Vyberte p&#345;&iacute;mky a stiskn&#283;te tla&#269;&iacute;tko Ze&#271;  pro vytvo&#345;en&iacute; zdi z t&#283;chto p&#345;&iacute;mek</li>
-<li>Spojte zdi jejich v&yacute;b&#283;rem a stisknut&iacute;m n&aacute;stroje P&#345;idat Ze&#271;</li>
-<li>Vytvo&#345;te objekt podla&#382;&iacute; a p&#345;esu&#328;te do n&#283;j ze&#271; z pohledu stromu</li>
-<li>Vytvo&#345;te objekt budova a p&#345;esu&#328;te do n&#283;j podla&#382;&iacute; z pohledu stromu</li>
-<li>Kliknut&iacute;m na n&aacute;stroj Okno vytvo&#345;te okno, vyberte nastaven&iacute; v jeko panelu a pak klikn&#283;te na plochu zdi</li>
-<li>P&#345;idejte rozm&#283;ry prvn&iacute;m nastaven&iacute;m pracovn&iacute; roviny, pokud je to pot&#345;eba a potom pou&#382;ijte n&aacute;stroj K&oacute;ty</li></ol>
-</div>
+<ol><li>Nakreslete n&#283;kolik lini&iacute; pomoc&iacute; n&aacute;stroje Draft Line.</li>
+<li>Vyberte ka&#382;dou linii a stiskn&#283;te n&aacute;stroj Wall, abyste na ka&#382;d&eacute; z nich vytvo&#345;ili ze&#271;.</li>
+<li>Spojte st&#283;ny tak, &#382;e je vyberete a stisknete n&aacute;stroj P&#345;idat BIM.</li>
+<li>Vytvo&#345;te objekt podlahy a ve stromov&eacute; struktu&#345;e p&#345;et&aacute;hn&#283;te st&#283;ny do objektu podlahy.</li>
+<li>Vytvo&#345;te objekt budovy a ve stromov&eacute; struktu&#345;e p&#345;et&aacute;hn&#283;te podlahu (kter&aacute; nyn&iacute; zahrnuje st&#283;ny) do objektu budovy.</li>
+<li>Vytvo&#345;te okno kliknut&iacute;m na n&aacute;stroj Okno, vyberte p&#345;edvolbu v jeho panelu a pot&eacute; klikn&#283;te na plochu st&#283;ny.</li>
+<li>P&#345;idejte k&oacute;ty tak, &#382;e nejprve nastav&iacute;te pracovn&iacute; rovinu, pokud je to nutn&eacute;, a pot&eacute; pou&#382;ijete n&aacute;stroj N&aacute;&#269;rt k&oacute;ty.</li></ol>
 <p>Dostanete toto:
 </p><p><span typeof="mw:File"><a href="../index.php?title=Arch_workflow_example.jpg&amp;filetimestamp=20140212173658&amp;.html" class="mw-file-description"><img src="../File/Arch_workflow_example.jpg" decoding="async" width="600" height="354" class="mw-file-element" data-file-width="1174" data-file-height="693"></a></span>
 </p>
@@ -181,13 +179,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118073910
+Cached time: 20260118074828
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.158 seconds
-Preprocessor visited node count: 285/1000000
+CPU time usage: 0.080 seconds
+Real time usage: 0.141 seconds
+Preprocessor visited node count: 284/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -197,19 +195,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.866      1 -total
- 27.62%    4.383      1 Template:Userdocnavi
- 16.95%    2.689      1 Template:Navigation_menu_2
- 14.56%    2.310      2 Template:Docnav
- 12.56%    1.993      1 Template:Incode
-  9.59%    1.521      2 Template:KEY
-  9.07%    1.439      1 Template:Caption
-  7.94%    1.259      1 Template:TOCright
-  7.38%    1.171      1 Template:Button
-  7.08%    1.124      1 Template:Emphasis
+100.00%   13.595      1 -total
+ 26.88%    3.654      1 Template:Userdocnavi
+ 16.29%    2.215      1 Template:Navigation_menu_2
+ 15.73%    2.139      2 Template:Docnav
+ 12.80%    1.740      1 Template:TOCright
+  8.94%    1.216      1 Template:Incode
+  8.93%    1.214      1 Template:Caption
+  7.62%    1.036      1 Template:Button
+  7.22%    0.981      1 Template:Emphasis
+  7.19%    0.977      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118073910 and revision id 1739848. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118074827 and revision id 1739850. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
