Created page with "Každý uživatel může vyvíjet vlastní nové funkce pro FreeCADu a zpřístupnit je FreeCAD komunitě jako [[Addon|doplněk]]."

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -122,10 +122,8 @@
 </p><p><span id="Addons"></span>
 </p>
 <h2><span id="Dopl.C5.88ky"></span><span class="mw-headline" id="Dopl&#328;ky">Dopl&#328;ky</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Any user can develop their own new features for FreeCAD and make them available to the FreeCAD community as an <a href="../Addon.html" title="Addon">addon</a>.
+<p>Ka&#382;d&yacute; u&#382;ivatel m&#367;&#382;e vyv&iacute;jet vlastn&iacute; nov&eacute; funkce pro FreeCADu a zp&#345;&iacute;stupnit je FreeCAD komunit&#283; jako <a href="../Addon.html" title="Addon">dopln&#283;k</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>There are three types of addons:
 </p>
@@ -175,13 +173,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118074839
+Cached time: 20260118074931
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.155 seconds
-Preprocessor visited node count: 283/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.154 seconds
+Preprocessor visited node count: 282/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -191,19 +189,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.501      1 -total
- 21.54%    3.770      1 Template:Userdocnavi
- 12.85%    2.248      2 Template:Docnav
- 12.78%    2.237      1 Template:Caption
- 12.02%    2.104      1 Template:TOCright
- 11.23%    1.966      1 Template:Navigation_menu_2
- 10.43%    1.825      1 Template:Emphasis
-  9.06%    1.585      1 Template:Incode
-  8.33%    1.457      1 Template:Button
-  6.35%    1.111      2 Template:KEY
+100.00%   11.936      1 -total
+ 30.85%    3.682      1 Template:Userdocnavi
+ 18.46%    2.203      1 Template:Navigation_menu_2
+ 14.92%    1.781      2 Template:Docnav
+  9.53%    1.137      1 Template:Incode
+  9.45%    1.128      1 Template:TOCright
+  8.45%    1.008      1 Template:Caption
+  8.12%    0.969      2 Template:KEY
+  6.79%    0.810      1 Template:Button
+  6.69%    0.799      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118074839 and revision id 1739852. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118074931 and revision id 1739854. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
