Created page with "Existují tři typy doplňků: * [[Macros|Makra]]: krátký fragment kódu [[Python|Python]], který poskytuje nový nástroj nebo funkci v jediném souboru končícím příponou {{incode|.FCMacro}}. * [[External_workbenches|Pracovní plochy]]: sbírky souborů Pythonu, které poskytují související [[Gui_Command|Gui příkazy]] (nástroje) zaměřené na konkrétní téma. * [[Preference_Packs|Balíčky předvoleb]]: distribuovatelné sbírky uživatelských předvoleb."

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -123,14 +123,11 @@
 </p>
 <h2><span id="Dopl.C5.88ky"></span><span class="mw-headline" id="Dopl&#328;ky">Dopl&#328;ky</span></h2>
 <p>Ka&#382;d&yacute; u&#382;ivatel m&#367;&#382;e vyv&iacute;jet vlastn&iacute; nov&eacute; funkce pro FreeCADu a zp&#345;&iacute;stupnit je FreeCAD komunit&#283; jako <a href="../Addon.html" title="Addon">dopln&#283;k</a>.
+</p><p>Existuj&iacute; t&#345;i typy dopl&#328;k&#367;:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>There are three types of addons:
-</p>
-<ul><li><a href="../Macros.html" title="Macros">Macros</a>: short snippet of <a href="../Python.html" title="Python">Python</a> code that provides a new tool or functionality in a single file ending with <code>.FCMacro</code>.</li>
-<li><a href="../External_workbenches.html" title="External workbenches">Workbenches</a>: collections of Python files that provide related <a href="../Gui_Command.html" title="Gui Command">Gui Commands</a> (tools) centered around a particular topic.</li>
-<li><a href="../Preference_Packs.html" title="Preference Packs">Preference Packs</a>: distributable collections of user preferences.</li></ul>
-</div>
+<ul><li><a href="../Macros.html" title="Macros">Makra</a>: kr&aacute;tk&yacute; fragment k&oacute;du <a href="../Python.html" title="Python">Python</a>, kter&yacute; poskytuje nov&yacute; n&aacute;stroj nebo funkci v jedin&eacute;m souboru kon&#269;&iacute;c&iacute;m p&#345;&iacute;ponou <code>.FCMacro</code>.</li>
+<li><a href="../External_workbenches.html" title="External workbenches">Pracovn&iacute; plochy</a>: sb&iacute;rky soubor&#367; Pythonu, kter&eacute; poskytuj&iacute; souvisej&iacute;c&iacute; <a href="../Gui_Command.html" title="Gui Command">Gui p&#345;&iacute;kazy</a> (n&aacute;stroje) zam&#283;&#345;en&eacute; na konkr&eacute;tn&iacute; t&eacute;ma.</li>
+<li><a href="../Preference_Packs.html" title="Preference Packs">Bal&iacute;&#269;ky p&#345;edvoleb</a>: distribuovateln&eacute; sb&iacute;rky u&#382;ivatelsk&yacute;ch p&#345;edvoleb.</li></ul>
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
@@ -173,13 +170,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118074931
+Cached time: 20260118075359
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.154 seconds
-Preprocessor visited node count: 282/1000000
+CPU time usage: 0.089 seconds
+Real time usage: 0.165 seconds
+Preprocessor visited node count: 281/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -189,19 +186,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.936      1 -total
- 30.85%    3.682      1 Template:Userdocnavi
- 18.46%    2.203      1 Template:Navigation_menu_2
- 14.92%    1.781      2 Template:Docnav
-  9.53%    1.137      1 Template:Incode
-  9.45%    1.128      1 Template:TOCright
-  8.45%    1.008      1 Template:Caption
-  8.12%    0.969      2 Template:KEY
-  6.79%    0.810      1 Template:Button
-  6.69%    0.799      1 Template:Emphasis
+100.00%   25.646      1 -total
+ 30.15%    7.732      1 Template:Userdocnavi
+ 27.19%    6.973      1 Template:Incode
+ 21.81%    5.593      1 Template:Navigation_menu_2
+ 10.16%    2.607      2 Template:Docnav
+  7.44%    1.907      1 Template:TOCright
+  6.86%    1.758      1 Template:Caption
+  6.09%    1.563      2 Template:KEY
+  4.76%    1.221      1 Template:Button
+  4.59%    1.178      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118074931 and revision id 1739854. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118075359 and revision id 1739856. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
