--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -131,11 +131,8 @@
 <p><span id="Scripting"></span>
 </p>
 <h2><span id="Skriptov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Skriptov&aacute;n&iacute;">Skriptov&aacute;n&iacute;</span></h2>
-<div class="mw-translate-fuzzy">
-<p>A nakonec jedna z nejmocn&#283;j&scaron;&iacute;ch vlastnost&iacute; FreeCADu je prost&#345;ed&iacute; pro <a href="../cs/Scripting.html" class="mw-redirect" title="Scripting/cs">skriptov&aacute;n&iacute;</a>. Z integrovan&eacute; konzoly Pythonu (nebo z jak&eacute;hokoliv extern&iacute;ho skriptu Pythonu) m&#367;&#382;ete z&iacute;skat p&#345;&iacute;stup k t&eacute;m&#283;&#345; v&scaron;em &#269;&aacute;stem FreeCADu, vytv&aacute;&#345;en&iacute; nebo modifikaci konstrukc&iacute;, modifikaci zobrazen&iacute; objekt&#367; ve 3D sc&eacute;n&#283; nebo p&#345;&iacute;stup a mo&#382;nost modifikace interface FreeCADu. Skriptov&aacute;n&iacute; v Pythonu m&#367;&#382;e tak&eacute; b&yacute;t pou&#382;ito v <a href="../cs/Macros.html" title="Macros/cs">makrech</a>, kter&eacute; poskytuj&iacute; snadn&eacute; metody pro vytv&aacute;&#345;en&iacute; u&#382;ivatelsk&yacute;ch p&#345;&iacute;kaz&#367;.
-</p>
-</div>
-<p><span id="What's_new"></span>
+<p>A kone&#269;n&#283;, jednou z nejv&yacute;konn&#283;j&scaron;&iacute;ch funkc&iacute; FreeCADu je prost&#345;ed&iacute; <a href="../Power_users_hub.html#Scripting_in_FreeCAD" title="Power users hub">skriptov&aacute;n&iacute;</a>. Z integrovan&eacute; konzoly Pythonu (nebo z jak&eacute;hokoli jin&eacute;ho extern&iacute;ho skriptu Pythonu) m&#367;&#382;ete z&iacute;skat p&#345;&iacute;stup k t&eacute;m&#283;&#345; jak&eacute;koli &#269;&aacute;sti FreeCADu, vytv&aacute;&#345;et nebo upravovat geometrii, upravovat zobrazen&iacute; t&#283;chto objekt&#367; ve 3D sc&eacute;n&#283; nebo p&#345;istupovat k rozhran&iacute; FreeCADu a upravovat ho. Skriptov&aacute;n&iacute; Pythonu lze tak&eacute; pou&#382;&iacute;t v <a href="../index.php?title=Makrech&amp;action=edit&amp;redlink=1.html" class="new" title="Makrech (page does not exist)">makrech</a>, kter&aacute; poskytuj&iacute; snadn&yacute; zp&#367;sob vytv&aacute;&#345;en&iacute; vlastn&iacute;ch p&#345;&iacute;kaz&#367;.
+</p><p><span id="What's_new"></span>
 </p>
 <div class="mw-translate-fuzzy">
 <h2><span id="Co_je_nov.C3.A9ho"></span><span class="mw-headline" id="Co_je_nov&eacute;ho">Co je nov&eacute;ho</span></h2>
@@ -170,13 +167,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118075359
+Cached time: 20260118075509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.165 seconds
-Preprocessor visited node count: 281/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.153 seconds
+Preprocessor visited node count: 280/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
@@ -186,19 +183,19 @@ Unstrip post&#8208;expand size: 4566/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.646      1 -total
- 30.15%    7.732      1 Template:Userdocnavi
- 27.19%    6.973      1 Template:Incode
- 21.81%    5.593      1 Template:Navigation_menu_2
- 10.16%    2.607      2 Template:Docnav
-  7.44%    1.907      1 Template:TOCright
-  6.86%    1.758      1 Template:Caption
-  6.09%    1.563      2 Template:KEY
-  4.76%    1.221      1 Template:Button
-  4.59%    1.178      1 Template:Emphasis
+100.00%   13.259      1 -total
+ 25.84%    3.426      1 Template:Userdocnavi
+ 16.79%    2.226      2 Template:Docnav
+ 15.35%    2.035      1 Template:Navigation_menu_2
+  9.65%    1.280      1 Template:Incode
+  9.65%    1.279      2 Template:KEY
+  9.16%    1.214      1 Template:Caption
+  8.42%    1.117      1 Template:Emphasis
+  7.95%    1.054      1 Template:TOCright
+  7.60%    1.008      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118075359 and revision id 1739856. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118075508 and revision id 1739858. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
