Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -15,7 +15,7 @@
 <li><a href="../pt-br/Getting_started.html" class="mw-pt-progress mw-pt-progress--high" title="Come&ccedil;ando a usar (71% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Getting_started.html" class="mw-pt-progress mw-pt-progress--med" title="Primii pa&#351;i (29% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Getting_started.html" class="mw-pt-progress mw-pt-progress--low" title="Getting started (8% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Getting_started.html" class="mw-pt-progress mw-pt-progress--high" title="&#1055;&#1098;&#1088;&#1074;&#1080; &#1089;&#1090;&#1098;&#1087;&#1082;&#1080; (98% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Getting_started.html" class="mw-pt-progress mw-pt-progress--high" title="&#1053;&#1072;&#1095;&#1072;&#1083;&#1086; &#1088;&#1072;&#1073;&#1086;&#1090;&#1099; (88% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Getting_started.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1086;&#1079;&#1087;&#1086;&#1095;&#1072;&#1090;&#1080; (4% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -135,12 +135,7 @@
 </p><p><span id="What's_new"></span>
 </p>
 <h2><span id="Co_je_nov.C3.A9ho"></span><span class="mw-headline" id="Co_je_nov&eacute;ho">Co je nov&eacute;ho</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li><a href="../Release_notes_0.11.html" title="Release notes 0.11">Verze 0.11 Release notes</a>&nbsp;: Co je nov&eacute;ho ve verzi 0.11 FreeCADu</li>
-<li><a href="../Release_notes_0.12.html" title="Release notes 0.12">Verze 0.12 Release notes</a>&nbsp;: Co je nov&eacute;ho ve verzi 0.12 FreeCADu</li>
-<li><a href="../Release_notes_0.13.html" title="Release notes 0.13">Verze 0.13 Release notes</a>&nbsp;: Co je nov&eacute;ho ve verzi 0.13 FreeCADu</li>
-<li><a href="../Release_notes_0.14.html" title="Release notes 0.14">Verze 0.14 Release notes</a>&nbsp;: Co je nov&eacute;ho ve verzi 0.14 FreeCADu</li></ul>
-</div>
+<ul><li>Podrobn&yacute; seznam funkc&iacute; najdete v <a href="../Feature_list.html#Release_notes" title="Feature list">pozn&aacute;mk&aacute;ch k vyd&aacute;n&iacute;</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -165,35 +160,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118075514
+Cached time: 20260118075633
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.163 seconds
-Preprocessor visited node count: 279/1000000
+CPU time usage: 0.084 seconds
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 8855/2097152 bytes
 Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4566/5000000 bytes
+Unstrip post&#8208;expand size: 4570/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.515      1 -total
- 25.67%    3.982      1 Template:Userdocnavi
- 17.51%    2.716      2 Template:Docnav
- 16.01%    2.484      1 Template:Navigation_menu_2
- 10.25%    1.591      1 Template:TOCright
- 10.12%    1.570      1 Template:Caption
-  9.11%    1.414      1 Template:Emphasis
-  7.73%    1.200      1 Template:Button
-  7.46%    1.157      2 Template:KEY
-  7.36%    1.142      1 Template:Incode
+100.00%   12.393      1 -total
+ 29.32%    3.634      1 Template:Userdocnavi
+ 17.49%    2.167      1 Template:Navigation_menu_2
+ 14.55%    1.803      2 Template:Docnav
+  9.88%    1.224      1 Template:Incode
+  9.39%    1.164      1 Template:Caption
+  8.80%    1.091      2 Template:KEY
+  8.54%    1.058      1 Template:Button
+  7.55%    0.936      1 Template:TOCright
+  7.05%    0.874      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118075514 and revision id 1739860. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118075633 and revision id 1739862. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
